--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -8,22 +8,44 @@
     <fragment
         android:id="@+id/fragmentSplash"
         android:name="com.taxi.app.ui.splash.SplashFragment"
-        android:label="@string/splash_fragment_label"
+        android:label=""
         tools:layout="@layout/fragment_splash">
-
         <action
             android:id="@+id/action_fragmentSplash_to_loginFragment"
-            app:destination="@id/loginFragment" />
+            app:destination="@id/loginFragment"
+            app:launchSingleTop="true"
+            app:popUpTo="@+id/fragmentSplash"
+            app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_fragmentSplash_to_dashboardFragment"
+            app:destination="@id/dashboardFragment"
+            app:launchSingleTop="true"
+            app:popUpTo="@+id/fragmentSplash"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/loginFragment"
         android:name="com.taxi.app.ui.login.LoginFragment"
         android:label="@string/login_fragment_label"
         tools:layout="@layout/fragment_login">
-
         <action
-            android:id="@+id/action_loginFragment_to_fragmentSplash"
-            app:destination="@id/fragmentSplash" />
+            android:id="@+id/action_loginFragment_to_dashboardFragment"
+            app:destination="@id/dashboardFragment" />
+        <action
+            android:id="@+id/action_loginFragment_to_registerFragment"
+            app:destination="@id/registerFragment" />
     </fragment>
+    <fragment
+        android:id="@+id/registerFragment"
+        android:name="com.taxi.app.ui.register.RegisterFragment"
+        android:label="RegisterFragment">
+        <action
+            android:id="@+id/action_registerFragment_to_dashboardFragment2"
+            app:destination="@id/dashboardFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/dashboardFragment"
+        android:name="com.taxi.app.ui.dashboard.DashboardFragment"
+        android:label="DashboardFragment" />
 
 </navigation>
